Попытка добавить цвет

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <title>Моя страничка на GitHub</title>
   </head>
-  <body>
+  <body bgcolor="#c80c80c80">
     <h1> Приветствую Вас на своей страничке!</h1>
     <p> Учусь работать с github </p>
   </body>
