--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <title>Моя страничка на GitHub</title>
   </head>
-  <body bgcolor="#c80c80c80">
+  <body bgcolor="#E0FFFF">
     <h1> Приветствую Вас на своей страничке!</h1>
     <p> Учусь работать с github </p>
   </body>
