--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <title>Моя страничка на GitHub</title>
   </head>
-  <body bgcolor="#E0FFFF">
+  <body background="https://catherineasquithgallery.com/uploads/posts/2021-02/1613700012_234-p-zadnii-fon-dlya-prezentatsii-257.jpg">
     <h1> Приветствую Вас на своей страничке!</h1>
     <p> Учусь работать с github </p>
   </body>
