--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <link rel="shortcut icon" type="image/png" href="https://www.pinclipart.com/picdir/big/217-2171720_github-clipart-octocat-icon-png-download.png">
     <title>Моя страничка на GitHub</title>
   </head>
   <body background="https://catherineasquithgallery.com/uploads/posts/2021-02/1613700012_234-p-zadnii-fon-dlya-prezentatsii-257.jpg">
