--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   </head>
   <body background="https://catherineasquithgallery.com/uploads/posts/2021-02/1613700012_234-p-zadnii-fon-dlya-prezentatsii-257.jpg">
     <h1 bgcolor="#c0c0c0"> Приветствую Вас на своей страничке!</h1>
-    <p> Учусь работать с github </p>
+    <p bgcolor="#c0c0c0"> Учусь работать с github </p>
   </body>
 </html>
