--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Моя страничка на GitHub</title>
   </head>
   <body background="https://catherineasquithgallery.com/uploads/posts/2021-02/1613700012_234-p-zadnii-fon-dlya-prezentatsii-257.jpg">
-    <h1 bgcolor="#c0c0c0"> Приветствую Вас на своей страничке!</h1>
-    <p bgcolor="#c0c0c0"> Учусь работать с github </p>
+    <h1 bgcolor="#E0FFFF"> Приветствую Вас на своей страничке!</h1>
+    <p bgcolor="#E0FFFF"> Учусь работать с github </p>
   </body>
 </html>
