--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
   <head>
     <link rel="shortcut icon" type="image/png" href="https://www.pinclipart.com/picdir/big/217-2171720_github-clipart-octocat-icon-png-download.png">
-    <title>Моя страничка на GitHub</title>
+    <title style="color:#A52A2A">Моя страничка на GitHub</title>
   </head>
   <body background="https://catherineasquithgallery.com/uploads/posts/2021-02/1613700012_234-p-zadnii-fon-dlya-prezentatsii-257.jpg">
-    <h1 style="color:#E0FFFF"> Приветствую Вас на своей страничке!</h1>
+    <h1 style="color:##FFFAFA"> Приветствую Вас на своей страничке!</h1>
     <p style="color:#E0FFFF"> Учусь работать с github </p>
   </body>
 </html>
